syntax = "proto3";

package elca.ntig.partnerapp.common.proto;

option java_multiple_files = true;
option java_package = "elca.ntig.partnerapp.common.proto.enums.person";

enum NationalityProto {
    NULL_NATIONALITY = 0;
    NATIONALITY_SWITZERLAND = 1;
    NATIONALITY_GERMAN = 2;
    NATIONALITY_SPANISH = 3;
    NATIONALITY_FRENCH = 4;
    NATIONALITY_BRITISH = 5;
    NATIONALITY_ITALIAN = 6;
}